src/components/PasswordBox.css
.password-box {
    position: relative;
    padding: 5.5rem 1.25rem 1.25rem;
}

.password-box .prompt {
    margin-top: -2.75rem;
    line-height: 1;
    pointer-events: none;
}

.password-box .password-input {
    margin: 5rem 0 4.5rem 0;
}

.password-box .password-input .input-container {
    position: static;
}

.password-box .password-input .input-wrapper {
    transition: transform 300ms var(--nimiq-ease)!important;
}

.password-box.input-eligible .password-input .input-wrapper {
    transform: translate(0, -3.5rem);
}

.password-box .password-input input {
    text-align: center;
    width: 100%;
}

.password-box .password-input .eye-button {
    top: 1.5rem;
    left: 2rem;
}

.password-box.hide-input .prompt,
.password-box.hide-input .password-input {
    display: none;
    margin: 0;
}

.password-box .submit {
    margin: -6.375rem auto 0.75rem;
    opacity: 0;
    transition:
        transform 450ms cubic-bezier(.25,0,0,1), /* From @nimiq/style */
        box-shadow 450ms cubic-bezier(.25,0,0,1), /* From @nimiq/style */
        color .3s cubic-bezier(.25,0,0,1), /* From @nimiq/style */
        opacity 150ms var(--nimiq-ease);
    pointer-events: none;
}

.password-box.input-eligible .submit,
.password-box.hide-input .submit {
    opacity: 1;
    transition-delay: 75ms;
    pointer-events: all;
}

.password-box .skip {
    opacity: 1;
    margin-top: -3.5rem;
}

.password-box.input-eligible .skip {
    opacity: 0;
}

/* SETTER */
.password-box .repeat-password,
.password-box .password-strength,
.password-box .repeat-short,
.password-box .repeat-long {
    margin-top: -2.75rem;
    line-height: 1;
    opacity: 0;
    transition: opacity 150ms var(--nimiq-ease);
    pointer-events: none;
}

.password-box.strength-short .password-strength.strength-short,
.password-box.strength-weak .password-strength.strength-weak,
.password-box.strength-good .password-strength.strength-good,
.password-box.strength-strong .password-strength.strength-strong,
.password-box.strength-secure .password-strength.strength-secure,
.password-box.too-long .password-strength.too-long,
.password-box.repeat-short .repeat-short,
.password-box.repeat-long .repeat-long {
    opacity: 1;
    transition-delay: 150ms;
}

.password-box .password-strength.shake {
    color: var(--nimiq-red);
}

.password-box.repeat.repeat-short .repeat-password,
.password-box.repeat.repeat-long .repeat-password {
    opacity: 0;
    pointer-events: none;
}

.password-box.repeat .repeat-password {
    opacity: 1;
}

.password-box.repeat .password-hint,
.password-box.repeat .password-strength {
    visibility: hidden;
}

.password-box.repeat .submit:not(.show-in-repeat),
.password-box:not(.repeat) .submit.show-in-repeat {
    display: none;
}

